# deepagents

./: README.md
.github/workflows/: binary.yml  ci.yml
libs/cli/: CHANGELOG.md  Makefile  pyproject.toml
libs/cli/deepagents_cli/: _chatgpt_model.py  app.py  clipboard.py  config.py  main.py  model_config.py  non_interactive.py  sessions.py  textual_adapter.py
libs/cli/tests/integration_tests/: test_autoresume.py
libs/cli/tests/unit_tests/: test_app.py  test_config.py  test_reload.py  test_sessions.py  test_textual_adapter.py
libs/codex-chatgpt-auth/: Makefile  README.md  pyproject.toml
libs/codex-chatgpt-auth/langchain_codex_chatgpt_auth/: __init__.py  _credentials.py
libs/codex-chatgpt-auth/tests/unit_tests/: test_credentials.py
libs/deepagents-full/: pyproject.toml
libs/deepagents-full/deepagents_full/: __init__.py
